@@ -22,7 +22,8 @@ Options:
 -h/--help       -- print this text and exit
 --timeout TIMEOUT
                 -- dump the traceback and exit if a test takes more
-                   than TIMEOUT seconds
+                   than TIMEOUT seconds (default: 15 minutes); disable
+                   the timeout if TIMEOUT is zero
 
 Verbosity
 
@@ -239,7 +240,7 @@ def main(tests=None, testdir=None, verbose=0, quiet=False,
          findleaks=False, use_resources=None, trace=False, coverdir='coverage',
          runleaks=False, huntrleaks=False, verbose2=False, print_slow=False,
          random_seed=None, use_mp=None, verbose3=False, forever=False,
-         header=False, timeout=None):
+         header=False, timeout=15*60):
     """Execute a test suite.
 
     This also parses command-line options and modifies its behavior
